# ar4_robot

./: CMakeLists.txt  README.md  package.xml
config/: mk4.yaml
driver/: driver.yaml
launch/: demo.launch.py  moveit.launch.py
meshes/: Link_1_Col.STL  Link_1_Motor.STL  Link_2_Col.STL  Link_2_Cover.STL  Link_2_Logo.STL  Link_2_Motor.STL  Link_3_Aluminum.STL  Link_3_Col.STL  Link_3_Motor.STL  Link_4_Aluminum.STL  Link_4_Col.STL  Link_4_Cover.STL  Link_4_Logo.STL  Link_4_Motor.STL  Link_5_Aluminum.STL  Link_5_Motor.STL  Link_6_Aluminum.STL  Link_Base_Enclosure.STL
rviz/: moveit.rviz
srdf/: ar.srdf.xacro  ar_gripper_macro.srdf.xacro  ar_macro.srdf.xacro
urdf/: ar.urdf.xacro  ar_gazebo.urdf.xacro  ar_gripper_macro.xacro  ar_macro.xacro  fake_ar.urdf.xacro
